--- a/2.html
+++ b/2.html
@@ -5,9 +5,8 @@
 	<title>Document</title>
 </head>
 <body>
-<p>hello today is 0506</p>
-<p>text1</p>
-<a href="2.html">text2</a>
+<p>text2</p>
+<a href="index.html">text1</a>
 <a href="3.html">text3</a>
 <a href><img src="1.jpg" width="200" height="100"></a>
 </body>
