--- a/3.html
+++ b/3.html
@@ -5,10 +5,9 @@
 	<title>Document</title>
 </head>
 <body>
-<p>hello today is 0506</p>
-<p>text1</p>
+<p>text3</p>
 <a href="2.html">text2</a>
-<a href="3.html">text3</a>
+<a href="index.html">text1</a>
 <a href><img src="1.jpg" width="200" height="100"></a>
 </body>
 </html>
