--- a/index.html
+++ b/index.html
@@ -10,6 +10,21 @@
 <a href="2.html">text2</a>
 <a href="3.html">text3</a>
 <a href><img src="1.jpg" width="200" height="100"></a>
+<a href><img src="2.gif" width="200" height="100"></a>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/aVfZMroXqqY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<table style="border:3px #cccccc solid;" cellpadding="10" border='1'>
+<tr><td>這是表格欄位</td><td>這是表格欄位</td></tr>
+<tr><td>這是表格欄位</td><td>這是表格欄位</td></tr>
+</table>
+
+<table style="border:3px #FFD382 dashed;" cellpadding="10" border='1'>
+<tr><td>這是表格欄位</td><td>這是表格欄位</td></tr>
+<tr><td>這是表格欄位</td><td>這是表格欄位</td></tr>
+</table>
+
+<table style="border:8px #FFD382 groove;" cellpadding="10" border='0'>
+<tr><td>這是表格欄位</td><td>這是表格欄位</td></tr>
+<tr><td>這是表格欄位</td><td>這是表格欄位</td></tr>
+</table>
 </body>
 </html>
