--- a/index.html
+++ b/index.html
@@ -4,27 +4,31 @@
 	<meta charset="UTF-8">
 	<title>Document</title>
 </head>
+
 <body>
-<p>hello today is 0506</p>
-<p>text1</p>
-<a href="2.html">text2</a>
-<a href="3.html">text3</a>
-<a href><img src="1.jpg" width="200" height="100"></a>
-<a href><img src="2.gif" width="200" height="100"></a>
+	<p>hello today is 0506</p>
+	<p>text1</p>
+	<a href="2.html">text2</a>
+	<a href="3.html">text3</a>
+	<a href><img src="1.jpg" width="200" height="100"></a>
+	<a href><img src="2.gif" width="200" height="100"></a>
+
 <iframe width="560" height="315" src="https://www.youtube.com/embed/aVfZMroXqqY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
 <table style="border:3px #cccccc solid;" cellpadding="10" border='1'>
-<tr><td>這是表格欄位</td><td>這是表格欄位</td></tr>
-<tr><td>這是表格欄位</td><td>這是表格欄位</td></tr>
+<tr><td><img src="3.jpg" width="200" height="100"></td><td><img src="4.jpg" width="200" height="150"></td></tr>
+<tr><td><img src="5.jpg" width="200" height="100"></td><td><img src="6.jpg" width="200" height="100"></td></tr>
 </table>
 
 <table style="border:3px #FFD382 dashed;" cellpadding="10" border='1'>
-<tr><td>這是表格欄位</td><td>這是表格欄位</td></tr>
-<tr><td>這是表格欄位</td><td>這是表格欄位</td></tr>
+<tr><td>你的貓</td><td>在想你</td></tr>
+<tr><td>趕快把牠</td><td>帶回家</td></tr>
 </table>
 
 <table style="border:8px #FFD382 groove;" cellpadding="10" border='0'>
-<tr><td>這是表格欄位</td><td>這是表格欄位</td></tr>
-<tr><td>這是表格欄位</td><td>這是表格欄位</td></tr>
+<tr><td><input type ="button" onclick="location.href='2.html'" value="按鈕1"></input></td><td><input type ="button" onclick="javascript:location.href='3.html'" value="按鈕2"></input></td></tr>
+<tr><td><input type ="button" onclick="javascript:location.href='http://www.wibibi.com'" value="按鈕3"></input></td><td><input type ="button" onclick="javascript:location.href='http://www.wibibi.com'" value="按鈕4"></input></td></tr>
+
 </table>
 </body>
 </html>
