--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 	<p>text1</p>
 	<a href="2.html">text2</a>
 	<a href="3.html">text3</a>
+	<a href="5.html">text5</a>
+	<a href="4.html">換顏色</a>
 	<a href><img src="1.jpg" width="200" height="100"></a>
 	<a href><img src="2.gif" width="200" height="100"></a>
 
