--- a/4.html
+++ b/4.html
@@ -8,9 +8,9 @@
 
 <body>
 	<nav>
-<div style="background-color:#FFBB73;">修改 DIV 區塊的背景顏色</div>
-<div style="background-color:pink;">修改 DIV 區塊的背景顏色</div>
-<div style="background-color:rgb(232,106,192);">修改 DIV 區塊的背景顏色</div>
+<div style="background-color:#FFBB73;">123</div>
+<div style="background-color:pink;">456</div>
+<div style="background-color:rgb(232,106,192);">789</div>
 	</nav>
     <p>this is index page</p>
 </body>
