--- a/index.html
+++ b/index.html
@@ -17,11 +17,15 @@
 		#b4{ 
 				background-color:#97CBFF;
 		}
+		.important{color:red; background-color:#97CBFF}
 	</style>
+
+	
 </head>
 
 <body>
     <p>hello today is 0506</p>
+    <p class="important">hello today is 0513</p>
     <p>text1</p>
     <a href="2.html">text2</a>
     <a href="3.html">text3</a>
