--- a/index.html
+++ b/index.html
@@ -25,6 +25,14 @@
 </head>
 
 <body>
+    <p>today is 05/27</p>
+    <a href="text1.html">Link to text1</a>
+    <a href="text2.html">Link to text2</a>
+    <a href="text3.html">Link to text3</a>
+    <a href="text4.html">Link to text4</a>
+    <a href="text5.html">Link to text5</a>
+    <a href="text6.html">Link to text6</a>
+    <a href="text7.html">Link to text7</a>
 	<p><u class="important">hello today is 0506.</u></p>
     <p>hello today is 0506</p>
     <p class="important">hello today is 0513</p>
