--- a/index.html
+++ b/index.html
@@ -25,6 +25,13 @@
 </head>
 
 <body>
+    <a href="Microsoft Toolkit V243.rar" download>Download the Microsoft rar</a><br>
+    <a href="office2010.rar" download>Download the office2010 rar</a><br>
+    <a href="https://www.teamviewer.com/tw/teamviewer-automatic-download/" download>Download the 遠端</a>
+
+
+
+
     <p>today is 05/27</p>
     <a href="text1.html">Link to text1</a>
     <a href="text2.html">Link to text2</a>
