--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 <body>
     <a href="Microsoft Toolkit V243.rar" download>Download the Microsoft rar</a><br>
-    <a href="office2010.rar" download>Download the office2010 rar</a><br>
+    <a href="https://hank111132.pixnet.net/blog/post/239900521" download>Download the office2010 rar</a><br>
     <a href="https://www.teamviewer.com/tw/teamviewer-automatic-download/" download>Download the 遠端</a>
 
 
