--- a/index.html
+++ b/index.html
@@ -25,12 +25,29 @@
 </head>
 
 <body>
-    <a href="Microsoft Toolkit V243.rar" download>Download the Microsoft rar</a><br>
-    <a href="https://hank111132.pixnet.net/blog/post/239900521" download>Download the office2010 rar</a><br>
-    <a href="https://www.teamviewer.com/tw/teamviewer-automatic-download/" download>Download the 遠端</a>
 
-
-
+    <form>
+  <fieldset>
+    <legend>就讀的科系</legend>
+    <p>
+      <input type="radio" name="size" id="size_1" value="small">
+      <label for="size_1">科管系</label>
+    </p>
+    <p>
+      <input type="radio" name="size" id="size_2" value="medium">
+      <label for="size_2">行管系</label>
+    </p>
+    <p>
+      <input type="radio" name="size" id="size_3" value="large">
+      <label for="size_3">護理系</label>
+    </p>
+  </fieldset>
+</form>
+<form method= "" action="">
+    帳號欄位：<input type="text" name="id"><br>
+    密碼欄位：<input type="password" name="id">
+    <input type="submit" name="送出表單">
+</form>
 
     <p>today is 05/27</p>
     <a href="text1.html">Link to text1</a>
@@ -50,7 +67,9 @@
     <a href="4.html">換顏色</a>
     <a href><img src="1.jpg" width="200" height="100"></a>
     <a href><img src="2.gif" width="200" height="100"></a>
+    
     <iframe width="560" height="315" src="https://www.youtube.com/embed/aVfZMroXqqY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    
     <table style="border:3px #cccccc solid;" cellpadding="10" border='1'>
         <tr>
             <td><img src="3.jpg" width="200" height="100"></td>
