--- a/nav.html
+++ b/nav.html
@@ -12,5 +12,6 @@
 	<a href="text5.html">Link to text5</a>
 	<a href="text6.html">Link to text6</a>
 	<a href="text7.html">Link to text7</a>
+	<a href="text8.html">輸入帳號密碼</a>
 </body>
 </html>
