--- a/nav.html
+++ b/nav.html
@@ -13,5 +13,7 @@
 	<a href="text6.html">Link to text6</a>
 	<a href="text7.html">Link to text7</a>
 	<a href="text8.html">輸入帳號密碼</a>
+	<a href="text9.html">相片往下滑動</a>
+	<a href="text10.html">相片左滑動</a>
 </body>
 </html>
