--- a/nav.html
+++ b/nav.html
@@ -15,5 +15,6 @@
 	<a href="text8.html">輸入帳號密碼</a>
 	<a href="text9.html">相片往下滑動</a>
 	<a href="text10.html">相片左滑動</a>
+	<a href="text11.html">按鈕1~5</a>
 </body>
 </html>
