--- a/nav.html
+++ b/nav.html
@@ -16,5 +16,6 @@
 	<a href="text9.html">相片往下滑動</a>
 	<a href="text10.html">相片左滑動</a>
 	<a href="text11.html">按鈕1~5</a>
+	<a href="text13.html">放大縮小</a>
 </body>
 </html>
